# openscenario-mcp

./: .clippy.toml  .gitignore  BREAKING_CHANGES_AUDIT.md  CHANGELOG.md  CI_VERIFICATION_FINAL.md  CLAUDE.md  CLAUDE_USAGE.md  CONTRIBUTING.md  CUSTOM_XODR.md  Cargo.toml  DOCUMENTATION_MILESTONE_PLAN.md  DOC_UX_AUDIT.md  DOC_UX_RECOMMENDATIONS.md  EXECUTIVE_SUMMARY.md  INSTALL.md  LICENSE-APACHE  MCP_INIT_OPTIONS.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  REVIEW_RESOLUTION_FINAL.md  REVIEW_RESOLUTION_SUMMARY.md  SCHEMA_INSTALLATION_COMPLETE.md  SECURITY_REVIEW_f5a38e6.md  SET_COLLISION_TRIGGER_GUIDE.md  SET_TRIGGER_TIME_GUIDE.md  USAGE.md  VSCODE_USAGE.md  XSD_IMPLEMENTATION_COMPLETE.md  XSD_VALIDATION_GAP_ANALYSIS.md  fix_tests.py  generate_with_roads.sh  test_catalog_validation.sh  test_mcp_integration.py  test_osm_conversion.sh
openscenario/: Cargo.toml  check-schemas.sh
openscenario/examples/: adaptive_cruise_control.rs  analyze_road.rs  emergency_braking.rs  find_good_roads.rs  highway_merge.rs  lane_change.rs  lane_change_overtaking.rs  platooning.rs  test_all_vehicles.rs  test_road_intelligence.rs  test_validation.rs  xml_export.rs
openscenario/schemas/: README.md
openscenario/src/: catalog.rs  entities.rs  error.rs  lib.rs  opendrive_validator.rs  parser.rs  position.rs  scenario.rs  storyboard.rs  validation.rs  xml.rs
openscenario/tests/: acceleration_action_test.rs  action_tests.rs  assign_route_action_test.rs  catalog_tests.rs  catalog_validation_e2e.rs  collision_condition_test.rs  entity_tests.rs  error_tests.rs  initial_state_tests.rs  (+20 more)
(+57 files in other folders)
