[package]
name = "openscenario"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version = "1.70"
description = "Rust library for generating and validating ASAM OpenSCENARIO scenarios"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
opendrive = "0.1"
uppsala = "0.4.0"
lazy_static = "1.5.0"

[dev-dependencies]
tempfile = "3.0"

[features]
# Optional feature for validating generated scenarios with esmini simulator
esmini_validation = []
